build: modify resume - first version